@@ -8,14 +8,13 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.time.LocalDateTime;
 import java.util.Collection;
-
-
+import java.util.List;
 
 
 @NoArgsConstructor
-@Getter
+@Getter @Setter
 @ToString
 @Entity
 @Table(name = "USER")
@@ -26,8 +25,8 @@ public class Member extends BaseTimeEntity implements UserDetails {
     @Column(name = "PASSWORD", nullable = false)
     private String password;
 
-    @Column(name = "NICENAME", nullable = false)
-    private String niceName;
+    @Column(name = "NICKNAME", nullable = false)
+    private String nickName;
 
     @Column(name = "BIRTHDAY", nullable = false)
     private LocalDate birthday;
@@ -43,44 +42,49 @@ public class Member extends BaseTimeEntity implements UserDetails {
     @Column(name = "ROLE", nullable = false)
     private Role role;
 
+
     @Builder
-    private Member(String userId, String password, String niceName, String email, LocalDate birthday, Gender gender) {
+    private Member(String userId, String password, String nickName, String email, LocalDate birthday, Gender gender) {
         this.userId = userId;
         this.password = password;
-        this.niceName = niceName;
+        this.nickName = nickName;
         this.email = email;
         this.birthday = birthday;
         this.gender = gender;
         this.role = Role.USER; // 기본 값
     }
 
+    // 사용자의 권한 목록을 반환(사용자 인지 관리자 인지)
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority(role.getKey()));
+        return List.of(new SimpleGrantedAuthority(role.getKey()));
     }
-
+    // 사용자 id 반환 (고유값)
     @Override
     public String getUsername() {
-        return "";
+        return this.userId;
     }
 
+    // 사용자의 계정이 만료되었는지 여부
     @Override
     public boolean isAccountNonExpired() {
-        return true;
+        return true; // 계정이 만료되지 않았음을 의미
     }
 
+    // 계정이 잠겼는지 여부
     @Override
     public boolean isAccountNonLocked() {
-        return true;
+        return true; // 잠금 X
     }
 
+    //비밀번호 만료 여부
     @Override
     public boolean isCredentialsNonExpired() {
-        return true;
+        return true; // 만료 X
     }
-
+    //계정 로그인 상태 활성화 상태인지
     @Override
     public boolean isEnabled() {
-        return true;
+        return true; //계정이 활성화된 상태
     }
 }
